--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>          
 
-        <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">MakMur Sehat</a>
@@ -21,21 +20,59 @@
 
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav mx-auto">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                <a class="nav-link" href="#">Resep Makanan</a>
-                <a class="nav-link" href="#">Tips Hidup Sehat</a>
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                <a class="nav-link" href="resep.html">Resep Makanan</a>
+                <a class="nav-link" href="tips.html">Tips Hidup Sehat</a>
+                <a class="nav-link" href="about.html">About</a>
               </div>
 
-              <!-- Ikon Sosial Media di Pojok Kanan -->
               <div class="navbar-nav ms-auto">
-                <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="nav-link"><i class="fab fa-facebook"></i></a>
-                <a href="#" class="nav-link"><i class="fab fa-instagram"></i></a>
-                <a href="#" class="nav-link"><i class="fab fa-linkedin"></i></a>
+                <a href="https://x.com/" class="nav-link"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.facebook.com/" class="nav-link"><i class="fab fa-facebook"></i></a>
+                <a href="https://www.instagram.com/mvw.14/" class="nav-link"><i class="fab fa-instagram"></i></a>
+                <a href="https://id.linkedin.com/" class="nav-link"><i class="fab fa-linkedin"></i></a>
               </div>
             </div>
           </div>
         </nav>
+
+        <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="10000">
+              <img src="assets/post-slide-1.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Some representative placeholder content for the first slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2000">
+              <img src="assets/post-slide-2.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Some representative placeholder content for the second slide.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="assets/post-slide-3.jpg" class="d-block w-100" alt="...">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Some representative placeholder content for the third slide.</p>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
     </body>
 </html>
