--- a/tips.html
+++ b/tips.html
@@ -1,39 +1,87 @@
 <html>
-    <head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>          
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>          
 
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-              <a class="navbar-brand text-white" href="#">MakMur Sehat</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand text-white" href="#">MakMur Sehat</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
   
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav mx-auto">
-                  <a class="nav-link" href="index.html">Home</a>
-                  <a class="nav-link"  href="resep.html">Resep Makanan</a>
-                  <a class="nav-link active" aria-current="page" href="tips.html">Tips Hidup Sehat</a>
-                  <a class="nav-link"  href="about.html">About</a>
-                </div>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav mx-auto">
+            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link"  href="resep.html">Resep Makanan</a>
+            <a class="nav-link active" aria-current="page" href="tips.html">Tips Hidup Sehat</a>
+            <a class="nav-link"  href="about.html">About</a>
+          </div>
   
-                <div class="navbar-nav ms-auto">
-                    <a href="https://x.com/" class="nav-link"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.facebook.com/" class="nav-link"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/mvw.14/" class="nav-link"><i class="fab fa-instagram"></i></a>
-                    <a href="https://id.linkedin.com/" class="nav-link"><i class="fab fa-linkedin"></i></a>
-                  </div>
-              </div>
-            </div>
-          </nav>
+          <div class="navbar-nav ms-auto">
+            <a href="https://x.com/" class="nav-link"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/" class="nav-link"><i class="fab fa-facebook"></i></a>
+            <a href="https://www.instagram.com/mvw.14/" class="nav-link"><i class="fab fa-instagram"></i></a>
+            <a href="https://id.linkedin.com/" class="nav-link"><i class="fab fa-linkedin"></i></a>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <div class="tips-container">
+      <h1>Tips Hidup Sehat</h1>
+      <h3>By konsep Makmur Sehat</h3>
+  
+      <h5>1. Pilih Bahan Lokal yang Terjangkau</h5>
+      <p>Gunakan bahan makanan lokal seperti sayuran hijau, tahu, tempe, dan buah-buahan musiman. <br>
+        Bahan-bahan ini mudah didapat dan harganya terjangkau, namun kaya akan nutrisi yang dibutuhkan tubuh.
+      </p>
+      <h5>2. Masak Sendiri</h5>
+        <p>Memasak sendiri memungkinkan Anda mengontrol kualitas dan kebersihan bahan makanan. 
+        Selain lebih hemat, Anda juga dapat memastikan bahwa makanan yang dikonsumsi bebas dari bahan tambahan yang tidak sehat seperti pengawet atau gula berlebih.</p>
+      <h5>3. Rencanakan Menu Harian</h5>
+        <p>Gunakan bahan makanan lokal seperti sayuran hijau, tahu, tempe, dan buah-buahan musiman. <br>
+        Bahan-bahan ini mudah didapat dan harganya terjangkau, namun kaya akan nutrisi yang dibutuhkan tubuh.
+        </p>
+      <h5>4. Kurangi Makanan Olahan</h5>
+        <p>Makanan olahan cenderung mengandung bahan kimia tambahan, garam, dan gula berlebih yang tidak baik bagi tubuh.<br>
+        Gantilah makanan kemasan dengan bahan segar seperti sayuran, biji-bijian, dan protein nabati.
+        </p>
+      <h5>5. Makan Buah dan Sayur Setiap Hari</h5>
+        <p>Pastikan mengonsumsi minimal lima porsi buah dan sayur setiap hari. Ini adalah sumber serat, vitamin, dan mineral yang sangat penting untuk menjaga kesehatan sistem pencernaan dan kekebalan tubuh.
+        </p>
+      <h5>6. Perbanyak Konsumsi Air Putih</h5>
+        <p>Hindari minuman manis dan lebih fokus pada minum air putih. Air membantu menjaga tubuh tetap terhidrasi, membantu proses pencernaan, serta mendukung fungsi otak dan organ vital lainnya.</p>
+      <h5>7. Aktivitas Fisik Secara Teratur</h5>
+        <p>Seimbangkan pola makan sehat dengan olahraga. Tidak perlu gym mahal, Anda bisa berolahraga secara sederhana seperti berjalan kaki, bersepeda, atau melakukan latihan ringan di rumah.</p>
+      <h5>8. Tidur yang Cukup</h5>
+        <p>Tidur berkualitas selama 7-8 jam sehari adalah bagian penting dari gaya hidup sehat. Kurang tidur bisa mengganggu metabolisme, daya tahan tubuh, dan produktivitas.</p>
+      <h5>9. Kelola Stres dengan Baik</h5>
+        <p>Stres berlebihan dapat memicu kebiasaan makan yang buruk dan mempengaruhi kesehatan fisik serta mental.<br>
+           Lakukan relaksasi seperti meditasi, yoga, atau hobi yang menyenangkan untuk menjaga keseimbangan mental.</p>
+      <h5>10. Belanja di Pasar Tradisional</h5>
+        <p>Selain lebih murah, bahan makanan di pasar tradisional biasanya lebih segar. Membeli produk langsung dari petani atau produsen lokal juga mendukung perekonomian setempat.</p>
+      <h5>11. Coba Resep Baru</h5>
+        <p>Cobalah variasi resep sehat yang kreatif agar tidak bosan. Misalnya, buatlah olahan tempe menjadi berbagai hidangan seperti sate tempe, tempe goreng krispi, atau tumis tempe kacang panjang. <br>
+          Kreativitas dalam memasak membuat makanan sehat tetap menarik dan lezat.</p>
+      <h5>12. Batasi Konsumsi Gula dan Garam</h5>
+        <p>Penggunaan gula dan garam yang berlebihan bisa berdampak buruk pada kesehatan, seperti meningkatkan risiko hipertensi, diabetes, dan penyakit jantung. <br>
+          Gunakan alternatif seperti rempah-rempah alami untuk menambah cita rasa makanan tanpa harus menggunakan banyak gula atau garam.</p>
+      <h5>13. Makan dengan Porsi yang Seimbang</h5>
+        <p>Pastikan setiap kali makan, ada keseimbangan antara karbohidrat, protein, serat, dan lemak sehat. Jangan makan berlebihan, dan selalu dengarkan kebutuhan tubuh, bukan sekadar nafsu makan.</p>
+      <h5>14. Perhatikan Label Makanan</h5>
+        <p>Jika terpaksa membeli produk kemasan, baca label nutrisi dengan cermat.<br>
+           Hindari produk dengan kandungan bahan yang tidak dikenal atau yang mengandung banyak pengawet, pewarna, dan bahan kimia tambahan.</p>
+      <h5>15. Hindari Kebiasaan Makan Berlebihan</h5>
+        <p>Cobalah untuk makan perlahan dan berhenti sebelum kenyang penuh. Makan dengan penuh kesadaran membantu tubuh mengatur sinyal lapar dan kenyang dengan lebih baik.</p>
+      </div>
     </body>
 </html>
