update resep.html + edit home page

--- a/resep.html
+++ b/resep.html
@@ -35,5 +35,47 @@
               </div>
             </div>
           </nav>
+
+          <div class="container my-5">
+            <div class="jumbotron text-center bg-light p-5">
+              <h1>Temukan Resep MaKMur mu!</h1>
+              <p>Murah, Lezat dan penuh gizi untuk gaya hidup yang sehat.</p>
+            </div>
+          
+          </div>
+          
+          <h1 class = "text-center"> Resep Yang Populer </h1>
+          <div class="row justify-content-center">
+            <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+              </div>
+            </div>
+          </div>
     </body>
 </html>
