--- a/index.html
+++ b/index.html
@@ -48,22 +48,22 @@
             <div class="carousel-item active" data-bs-interval="10000">
               <img src="assets/slide1.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
+                <h5>Resep-resep makanan sehat</h5>
+                <p>Banyak dan bervariasi!</p>
               </div>
             </div>
             <div class="carousel-item" data-bs-interval="2000">
               <img src="assets/slide2.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
+                <h5>Tips Hidup Sehat</h5>
+                <p>hidup sehat juga butuh hal lain selain makan yang sehat!</p>
               </div>
             </div>
             <div class="carousel-item">
               <img src="assets/slide3.jpg" class="d-block w-100" alt="...">
               <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
+                <h5>Join Community</h5>
+                <p>Ikuti komunitas kami agar tidak ketinggalan resep terbaru kami!</p>
               </div>
             </div>
           </div>
@@ -122,15 +122,15 @@
           </div>
         </div>
         <div class="container my-5">
-          <h2 class="text-center mb-4">Why Healthy Eating?</h2>
+          <h2 class="text-center mb-4">Kenapa Kita Harus Makan Sehat?</h2>
           <div class="row">
 
               <div class="col-md-4">
                   <div class="media">
                       <i class="fas fa-heart fa-3x text-success mr-3"></i>
                       <div class="media-body">
-                          <h5 class="mt-0">Better Heart Health</h5>
-                          A diet rich in vegetables and lean proteins can improve your heart health and lower the risk of heart disease.
+                          <h5 class="mt-0">Kualitas Kesehatan</h5>
+                          Makanan yang penuh dengan nutrisi mampu mengurangi kesempatan terkena penyakit kronis.
                       </div>
                   </div>
               </div>
@@ -139,8 +139,8 @@
                   <div class="media">
                       <i class="fas fa-apple-alt fa-3x text-warning mr-3"></i>
                       <div class="media-body">
-                          <h5 class="mt-0">Boosts Immunity</h5>
-                          Consuming foods high in vitamins and minerals strengthens your immune system and keeps illnesses at bay.
+                          <h5 class="mt-0">meningkatkan Imunitas Tubuh</h5>
+                          Memakan makanan kaya akan vitamin dan mineral dapat meningkatkan daya tahan tubuh.
                       </div>
                   </div>
               </div>
@@ -149,8 +149,8 @@
                   <div class="media">
                       <i class="fas fa-running fa-3x text-primary mr-3"></i>
                       <div class="media-body">
-                          <h5 class="mt-0">Increases Energy</h5>
-                          Eating nutritious meals can provide more energy throughout the day and enhance your overall performance.
+                          <h5 class="mt-0">Meningkatkan Energi</h5>
+                          Memakan makanan sehat dapat meningkatkan energi untuk beraktivitas setiap hari.
                       </div>
                   </div>
               </div>
