--- a/resep.html
+++ b/resep.html
@@ -38,44 +38,102 @@
 
           <div class="container my-5">
             <div class="jumbotron text-center bg-light p-5">
-              <h1>Temukan Resep MaKMur mu!</h1>
-              <p>Murah, Lezat dan penuh gizi untuk gaya hidup yang sehat.</p>
+              <h1 class="text-white">Temukan Resep MakMur mu!</h1>
+              <p class="text-white">Murah, Lezat dan penuh gizi untuk gaya hidup yang sehat.</p>
             </div>
           
           </div>
           
           <h1 class = "text-center"> Resep Yang Populer </h1>
+          <h5 class="text-center"> Dipercaya oleh ratusan orang </h5>
+
           <div class="row justify-content-center">
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="assets/slide1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Resep 1</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, quia.</p>
+                  <a href="#" class="btn btn-primary">Lebih Lengkap</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="assets/slide2.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Resep 2</h5>
+                  <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi, voluptate.</p>
+                  <a href="#" class="btn btn-primary">Lebih Lengkap</a>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="assets/slide3.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                  <h5 class="card-title">Resep 3</h5>
+                  <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, reprehenderit.</p>
+                  <a href="#" class="btn btn-primary">Lebih Lengkap</a>
                 </div>
               </div>
             </div>
           </div>
+
+          <h1 class = "text-center"> Resep lainnya </h1>
+          <h5 class="text-center"> Murah, sehat dan Lezat!</h5>
+
+          <div class="row align-items-center">
+            <div class="col">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/slide1.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Resep lain 1</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, voluptatibus.</p>
+                  <a href="#" class="btn btn-primary">Lebih Lanjut</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/slide2.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Resep lain 2</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nisi?</p>
+                  <a href="#" class="btn btn-primary">Lebih Lanjut</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/slide3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Resep lain 3</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, totam.</p>
+                  <a href="#" class="btn btn-primary">Lebih lanjut</a>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card" style="width: 18rem;">
+                <img src="assets/slide3.jpg" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Resep Lain 4</h5>
+                  <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, eum!</p>
+                  <a href="#" class="btn btn-primary">Lebih Lanjut</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L48,186.7C96,213,192,267,288,282.7C384,299,480,277,576,261.3C672,245,768,235,864,240C960,245,1056,267,1152,256C1248,245,1344,203,1392,181.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    <section id = "contact" class="footer">
+        <h1 class="text-center">Contact</h1>
+        <div class="container text-center contact">
+            <a href="https://www.instagram.com/mvw.14/"><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-whatsapp"></i></i></a>
+        </div>
+        <p class="text-center watermark">Dibuat oleh Miguel, Andreas, James</p>
+    </section>
     </body>
 </html>
