--- a/about.html
+++ b/about.html
@@ -1,39 +1,87 @@
-<html>
-    <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - MakMur Sehat</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
     <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>          
-
-        <nav class="navbar navbar-expand-lg navbar-light">
-            <div class="container-fluid">
-              <a class="navbar-brand text-white" href="#">MakMur Sehat</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+</head>
+<body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+            <a class="navbar-brand text-white" href="#">MakMur Sehat</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-              </button>
-  
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav mx-auto">
-                  <a class="nav-link " href="index.html">Home</a>
-                  <a class="nav-link" href="resep.html">Resep Makanan</a>
-                  <a class="nav-link" href="tips.html">Tips Hidup Sehat</a>
-                  <a class="nav-link active" aria-current="page" href="about.html">About</a>
+                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="resep.html">Resep Makanan</a>
+                    <a class="nav-link" href="tips.html">Tips Hidup Sehat</a>
+                    <a class="nav-link active" aria-current="page" href="about.html">About</a>
                 </div>
-  
                 <div class="navbar-nav ms-auto">
                     <a href="https://x.com/" class="nav-link"><i class="fab fa-twitter"></i></a>
                     <a href="https://www.facebook.com/" class="nav-link"><i class="fab fa-facebook"></i></a>
                     <a href="https://www.instagram.com/mvw.14/" class="nav-link"><i class="fab fa-instagram"></i></a>
                     <a href="https://id.linkedin.com/" class="nav-link"><i class="fab fa-linkedin"></i></a>
                 </div>
-              </div>
             </div>
-          </nav>
-    </body>
+        </div>
+    </nav>
+
+    <!-- About Section -->
+    <section class="container my-5">
+        <div class="row">
+            <div class="col-lg-6">
+                <h1 class="mb-4">About Us</h1>
+                <p>
+                    MakMur Sehat adalah platform yang didedikasikan untuk memberikan informasi tentang gaya hidup sehat, termasuk resep makanan sehat, tips kesehatan, dan banyak lagi. Kami percaya bahwa kesehatan adalah kekayaan yang sesungguhnya, dan kami berkomitmen untuk membantu Anda menjalani hidup yang lebih sehat dan bahagia.
+                </p>
+                <p>
+                    Dengan tim yang terdiri dari ahli gizi, chef, dan profesional kesehatan, kami ingin memberikan konten berkualitas dan dapat dipercaya untuk setiap pengunjung.
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Healthy lifestyle image">
+            </div>
+        </div>
+    </section>
+
+    <!-- Team Section -->
+    <section class="bg-light py-5">
+        <div class="container">
+            <h2 class="text-center mb-4">Meet Our team</h2>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" class="rounded-circle mb-3" alt="Miguel" width="150">
+                    <h5>Miguel</h5>
+                    <p>Ketua Kelompok</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" class="rounded-circle mb-3" alt="Andreas" width="150">
+                    <h5>Andreas</h5>
+                    <p>Anggota</p>
+                </div>
+                <div class="col-md-4">
+                    <img src="https://via.placeholder.com/150" class="rounded-circle mb-3" alt="James" width="150">
+                    <h5>James</h5>
+                    <p>Anggota</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="text-center py-4">
+        <p>&copy; 2024 MakMur Sehat. All Rights Reserved.</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+</body>
 </html>
