--- a/index.html
+++ b/index.html
@@ -162,55 +162,46 @@
 <h1>MAKMUR SEHAT: MENIKMATI MAKANAN MURAH DAN SEHAT
   </h1>
 <img class="center" src="assets/image 1.jpg">
-<h2>Pentingnya Makanan Sehat dalam Kehidupan
-  </h2>
+<h2>Pentingnya Makanan Sehat dalam Kehidupan</h2>
   <h3>Makanan sehat adalah fondasi utama dalam menjaga kesehatan tubuh. Asupan gizi yang cukup dapat membantu tubuh menjalankan fungsinya dengan baik, meningkatkan daya tahan tubuh, serta mencegah berbagai penyakit. Pola makan yang kaya akan sayuran, buah-buahan, biji-bijian, protein nabati, dan karbohidrat kompleks dapat memberikan manfaat jangka panjang bagi kesehatan fisik dan mental.
       Namun, di tengah kesadaran ini, masih banyak orang yang beranggapan bahwa makanan sehat selalu lebih mahal dibandingkan makanan cepat saji atau makanan olahan. Pada kenyataannya, banyak pilihan makanan yang sehat dan terjangkau jika kita mengetahui caranya. Dengan perencanaan yang baik, makanan murah dan sehat bukan lagi hal yang mustahil.
     </h3>
   <h2>Makanan Murah yang Sehat Pilihan Terbaik
-      Berikut adalah beberapa contoh makanan murah yang bisa menjadi bagian dari gaya hidup sehat:
-    </h2>
+      Berikut adalah beberapa contoh makanan murah yang bisa menjadi bagian dari gaya hidup sehat:</h2>
   <h4>1.Sayuran Hijau</h4>
   <p>Sayuran hijau seperti bayam, kangkung, dan sawi sangat mudah ditemukan di pasar tradisional dengan harga terjangkau. Sayuran ini kaya akan serat, vitamin, dan mineral yang bermanfaat bagi tubuh. Selain itu, sayuran hijau juga rendah kalori sehingga cocok dikonsumsi oleh mereka yang ingin menjaga berat badan.</p>
-  <h4>2.Tahu dan Tempe
-  </h4>
+  <h4>2.Tahu dan Tempe</h4>
   <p>Sebagai salah satu sumber protein nabati terbaik, tahu dan tempe adalah makanan murah meriah yang sangat sehat. Tahu dan tempe kaya akan protein, zat besi, dan kalsium. Kedua makanan ini juga mudah diolah menjadi berbagai hidangan yang lezat dan bervariasi.</p>
-  <h4>3.Beras Merah atau Oat
-  </h4>
+  <h4>3.Beras Merah atau Oat</h4>
   <P>Karbohidrat adalah sumber energi utama bagi tubuh. Beras merah dan oat adalah contoh sumber karbohidrat yang sehat. Beras merah mengandung lebih banyak serat dan vitamin dibandingkan beras putih. Sementara itu, oat mengandung serat larut yang baik untuk menjaga kesehatan jantung dan pencernaan.
   </P>
   <h4>4.Telur</h4>
   <p>Telur adalah salah satu sumber protein hewani yang sangat terjangkau. Selain protein, telur juga mengandung vitamin D, vitamin B12, serta lemak sehat. Telur bisa dimasak dalam berbagai cara, seperti direbus, digoreng, atau dijadikan omelet.
   </p>
-  <h4>5.Buah Lokal
-  </h4>
+  <h4>5.Buah Lokal</h4>
   <P>Buah-buahan seperti pisang, pepaya, dan semangka adalah contoh buah lokal yang harganya terjangkau namun kaya akan vitamin, mineral, dan serat. Konsumsi buah secara rutin bisa membantu memenuhi kebutuhan harian akan vitamin C dan serat, yang baik untuk kesehatan kulit dan pencernaan.
   </P>
 
   <h2>Tips Menikmati Makanan Murah dan Sehat <br>
     Selain memilih bahan-bahan makanan yang murah dan sehat, ada beberapa tips yang bisa Anda terapkan untuk tetap makmur sehat tanpa perlu mengeluarkan banyak uang.
      </h2>
-    <h4>1. Belanja di Pasar Tradisional
-    </h4>
+    <h4>1. Belanja di Pasar Tradisional</h4>
     <p>Harga bahan makanan di pasar tradisional umumnya lebih murah dibandingkan di supermarket. Di pasar, Anda bisa mendapatkan sayuran, buah-buahan, dan bahan makanan lain yang segar dengan harga lebih terjangkau.
     </p>
-    <h4>2.Masak Sendiri
-    </h4>
+    <h4>2.Masak Sendiri</h4>
     <p>Salah satu cara terbaik untuk menikmati makanan sehat dengan harga murah adalah memasak sendiri. Dengan memasak sendiri, Anda bisa mengontrol kualitas bahan, takaran gizi, dan tentu saja, menghemat pengeluaran. Anda juga bisa membuat makanan dalam jumlah lebih banyak untuk disimpan sebagai bekal keesokan harinya.
     </p>
-    <h4>3.Pilih Makanan Musiman
-    </h4>
+    <h4>3.Pilih Makanan Musiman</h4>
     <p>Makanan yang sedang dalam musim biasanya lebih murah karena ketersediaannya melimpah. Misalnya, buah mangga yang harganya akan jauh lebih terjangkau saat musim mangga tiba. Pilihan makanan musiman juga biasanya lebih segar karena baru saja dipanen.
     </p>
     <h4>4.Kurangi Konsumsi Makanan Olahan</h4>
     <p>Makanan olahan atau kemasan, seperti mi instan atau makanan kalengan, mungkin tampak murah, tetapi sebenarnya tidak sehat dan justru bisa meningkatkan risiko penyakit seperti tekanan darah tinggi dan obesitas. Lebih baik fokus pada bahan-bahan segar yang alami.
     </p>
-    <h4>5.Kreatif dalam Mengolah Bahan
-    </h4>
+    <h4>5.Kreatif dalam Mengolah Bahan</h4>
     <p>Untuk mencegah kebosanan dalam menu makanan sehari-hari, cobalah untuk kreatif dalam mengolah bahan makanan yang ada. Misalnya, dengan mengolah tempe menjadi nugget tempe, atau membuat salad dari sayuran lokal. Dengan kreativitas, makanan sehat tidak akan terasa membosankan.
     </p>
 
-    <img class="center" src="assets/Makanan-sehat.jpg">
+    <img class="center" src="assets/image 2.jpg">
     <p>Mitos tentang Makanan Sehat
       Ada beberapa mitos yang perlu diluruskan tentang makanan sehat. Salah satunya adalah anggapan bahwa makanan sehat itu selalu mahal. Seperti yang sudah dibahas di atas, banyak makanan sehat yang sebenarnya murah, seperti sayuran hijau, tahu, tempe, dan telur. Mitos lainnya adalah bahwa makanan sehat harus selalu organik. Pada kenyataannya, makanan yang tidak berlabel organik pun masih bisa memberikan manfaat kesehatan selama diolah dan dimasak dengan cara yang benar.
       <br>
@@ -236,6 +227,6 @@
         </div>
         <p class="text-center watermark">Dibuat oleh Miguel, Andreas, James</p>
     </section>
-    </body>
+  </body>
 </html>
 
