--- a/tips.html
+++ b/tips.html
@@ -49,12 +49,10 @@
         Selain lebih hemat, Anda juga dapat memastikan bahwa makanan yang dikonsumsi bebas dari bahan tambahan yang tidak sehat seperti pengawet atau gula berlebih.</p>
       <h5>3. Rencanakan Menu Harian</h5>
         <p>Gunakan bahan makanan lokal seperti sayuran hijau, tahu, tempe, dan buah-buahan musiman. <br>
-        Bahan-bahan ini mudah didapat dan harganya terjangkau, namun kaya akan nutrisi yang dibutuhkan tubuh.
-        </p>
+        Bahan-bahan ini mudah didapat dan harganya terjangkau, namun kaya akan nutrisi yang dibutuhkan tubuh.</p>
       <h5>4. Kurangi Makanan Olahan</h5>
         <p>Makanan olahan cenderung mengandung bahan kimia tambahan, garam, dan gula berlebih yang tidak baik bagi tubuh.<br>
-        Gantilah makanan kemasan dengan bahan segar seperti sayuran, biji-bijian, dan protein nabati.
-        </p>
+        Gantilah makanan kemasan dengan bahan segar seperti sayuran, biji-bijian, dan protein nabati.</p>
       <h5>5. Makan Buah dan Sayur Setiap Hari</h5>
         <p>Pastikan mengonsumsi minimal lima porsi buah dan sayur setiap hari. Ini adalah sumber serat, vitamin, dan mineral yang sangat penting untuk menjaga kesehatan sistem pencernaan dan kekebalan tubuh.
         </p>
