update about us + put image

--- a/about.html
+++ b/about.html
@@ -40,14 +40,16 @@
             <div class="col-lg-6">
                 <h1 class="mb-4">About Us</h1>
                 <p>
-                    MakMur Sehat adalah platform yang didedikasikan untuk memberikan informasi tentang gaya hidup sehat, termasuk resep makanan sehat, tips kesehatan, dan banyak lagi. Kami percaya bahwa kesehatan adalah kekayaan yang sesungguhnya, dan kami berkomitmen untuk membantu Anda menjalani hidup yang lebih sehat dan bahagia.
-                </p>
+                  MakMur Sehat adalah sebuah platform yang bertujuan untuk membantu masyarakat mencapai gaya hidup yang lebih sehat dan seimbang melalui informasi yang terpercaya dan inspiratif. Kami hadir sebagai sumber daya yang kaya akan pengetahuan seputar kesehatan, dengan fokus utama pada resep makanan sehat, tips menjaga pola hidup sehat, hingga panduan untuk mengelola kesejahteraan fisik dan mental.</p>
                 <p>
-                    Dengan tim yang terdiri dari ahli gizi, chef, dan profesional kesehatan, kami ingin memberikan konten berkualitas dan dapat dipercaya untuk setiap pengunjung.
-                </p>
-            </div>
+                  Kami memahami bahwa dalam kehidupan yang sibuk dan penuh dengan tantangan, menjaga kesehatan sering kali terlupakan. Oleh karena itu, MakMur Sehat berkomitmen untuk memberikan solusi praktis yang dapat diterapkan dalam kehidupan sehari-hari. Kami percaya bahwa setiap individu berhak untuk mendapatkan akses terhadap informasi kesehatan yang mudah dipahami, sehingga semua orang bisa mulai memperbaiki kualitas hidupnya tanpa harus merasa kewalahan.</p>
+                <p>
+                  Di MakMur Sehat, kami bekerja sama dengan tim profesional yang terdiri dari ahli gizi, chef berpengalaman, serta praktisi kesehatan yang memiliki dedikasi tinggi dalam bidangnya masing-masing. Kami terus berusaha untuk menghadirkan konten yang up-to-date dan berbasis penelitian, sehingga Anda bisa yakin bahwa setiap informasi yang kami bagikan adalah yang terbaik untuk kesehatan Anda.</p>
+                <p>
+                  Selain itu, kami juga memfasilitasi komunitas yang aktif dan peduli akan kesehatan, di mana para pengguna dapat berbagi pengalaman, tantangan, dan kemajuan mereka dalam menjalani hidup sehat. Kami percaya bahwa kesehatan adalah kekayaan yang sesungguhnya, dan misi kami adalah untuk memberdayakan Anda dalam meraih kesehatan yang optimal dan kebahagiaan dalam hidup Anda sehari-hari.</p>
+              </div>
             <div class="col-lg-6">
-                <img src="https://via.placeholder.com/600x400" class="img-fluid" alt="Healthy lifestyle image">
+                <img src="assets/slide5.jpg" class="img-fluid" alt="Healthy lifestyle image">
             </div>
         </div>
     </section>
