--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <img src="assets/slide1.jpg" class="card-img-top" alt="...">
               <div class="card-body">
                 <h5 class="card-title">Semua Resep</h5>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, voluptatibus.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, aliquid.</p>
                 <a href="resep.html" class="btn btn-primary">Lebih Lanjut</a>
               </div>
             </div>
@@ -96,7 +96,7 @@
               <div class="card-body">
                 <h5 class="card-title">Cara Hidup Sehat</h5>
                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non, nisi?</p>
-                <a href="#" class="btn btn-primary">Lebih Lanjut</a>
+                <a href="tips.html" class="btn btn-primary">Lebih Lanjut</a>
               </div>
             </div>
           </div>
@@ -121,7 +121,7 @@
             </div>
           </div>
         </div>
-        <div class="container my-5">
+        <div class="container-1 center my-5">
           <h2 class="text-center mb-4">Kenapa Kita Harus Makan Sehat?</h2>
           <div class="row">
 
