--- a/resep.html
+++ b/resep.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
     <meta charset="UTF-8">
@@ -92,7 +91,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Resep lain 1</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Provident, voluptatibus.</p>
-                  <a href="#" class="btn btn-primary">Lebih Lanjut</a>
+                  <a href="resep1.html" class="btn btn-primary">Lebih Lanjut</a>
                 </div>
               </div>
             </div>
