tambahan artikel+edit resep

--- a/resep2.html
+++ b/resep2.html
@@ -40,7 +40,7 @@
 
           <div class="container-2">
             <header>
-                <h1>Resep Tumis Tahu Sayur</h1>
+                <h1>Resep Steak Tempe</h1>
                 <h6 style="color: gray;">Miguel Valentino, 31 Agustus 2030</h6>
             </header>
     
@@ -50,10 +50,12 @@
                 </div>
     
                 <div class="main">
-                    <h2><img width="50%" src="assets/tumistahu.jpeg" alt=""></h2>
-                    <p>Meskipun sederhana, tumis tahu ini rasanya istimewa. Tekstur tahunya lembut, dibalut bumbu yang gurih sedap. Renyahnya sayuran membuat rasanya makin enak.
-                      Tahu merupakan salah satu menu favorit di banyak restoran Chinese Food. Diolah menjadi sup, muntahu, sapo tahu, tahu cabe garam atau sekedar ditumis dengan sayuran dengan saus gurih kental.                     
-                      Membuat tumis tahu sayuran ala restoran Chinese Food tidak sulit. Yang penting bahan utamanya yaitu tahu, harus yang berkualitas bagus. Paduan sayuran bisa kamu pilih sesuai selera.
+                    <h2><img width="50%" src="assets/steaktempe.webp" alt=""></h2>
+                    <p>
+                      Steak tempe adalah alternatif hidangan sehat dan murah yang terbuat dari bahan sederhana namun tetap lezat dan bergizi. 
+                      Tempe, salah satu sumber protein nabati terbaik dari Indonesia, diolah menjadi steak dengan saus BBQ yang gurih dan manis. 
+                      Tidak hanya itu, sajian ini juga dilengkapi dengan sayuran rebus yang menambah nilai gizi. Jika Anda sedang mencari hidangan yang sehat, 
+                      terjangkau, dan mudah dibuat, steak tempe bisa menjadi pilihan yang sempurna.
                     </p>
                     <table>
                       <thead>
@@ -64,35 +66,43 @@
                       </thead>
                       <tbody>
                           <tr>
-                              <td>Tahu Putih</td>
-                              <td> 200-300 gram</td>
+                              <td>Tempe</td>
+                              <td> 100 gram</td>
+                          </tr>
+                          <tr>
+                              <td>Tepung terigu</td>
+                              <td> 1 sdm</td>
+                          </tr>
+                          <tr>
+                            <td>jagung</td>
+                            <td> 1 buah kecil</td>
                           </tr>
                           <tr>
                               <td>Wortel</td>
                               <td> 1 Buah</td>
                           </tr>
                           <tr>
-                            <td>Brokoli</td>
-                            <td> 100 gram</td>
-                          </tr>
-                          <tr>
-                              <td>Cabai Merah</td>
-                              <td> 3-4 Buah</td>
-                          </tr>
-                          <tr>
                             <td>Bawang Putih</td>
                             <td> 2 siung</td>
                           </tr>
                           <tr>
-                            <td>Saus Tiram</td>
-                            <td> 2 sdm</td>
+                            <td>buncis</td>
+                            <td> 50 gram</td>
                           </tr>
                           <tr>
-                            <td>kecap Asin</td>
-                            <td> 1 sdm</td>
+                            <td>kentang</td>
+                            <td> 1 buah</td>
+                          </tr>
+                          <tr>
+                            <td>Saus Tomat</td>
+                            <td> 3 sdm</td>
                           </tr>
                           <tr>
                             <td>Garam</td>
+                            <td> secukupnya</td>
+                          </tr>
+                          <tr>
+                            <td>Kaldu Bubuk</td>
                             <td> secukupnya</td>
                           </tr>
                           <tr>
@@ -106,24 +116,23 @@
                       </tbody>
                   </table>
 
-                  <h3>Total Perkiraan Harga = Rp 20.000-22.000 (untuk 3 Porsi)</h3>
+                  <h3>Total Perkiraan Harga = Rp 20.000</h3>
 
                   <h2>Cara Memasak:</h2>
                   <ol class="text-start">
-                    <li>Potong dadu tahu putih dan wortel sesuai selera</li>
-                    <li>Potong kecil brokoli dan bawang putih.</li>
-                    <li>Panaskan minyak di wajan, tumis bawang putih hingga harum.</li>
-                    <li>Masukkan wortel dan brokoli, tumis 2-3 menit.</li>
-                    <li>Tambahkan tahu yang dipotong dadu, tumis hingga kecokelatan.</li>
-                    <li>Masukkan cabai merah, saus tiram, kecap asin, garam, dan merica. Aduk rata dan masak hingga sayuran matang.</li>
+                    <li>Rebus tempe selama 20 menit. Setelah matang, angkat dan tumbuk tempe hingga halus. Tambahkan sedikit garam dan tepung terigu, kemudian bentuk sesuai selera (bisa bulat pipih seperti steak daging).</li>
+                    <li>Rebus sayuran jagung, wortel, dan buncis hingga empuk. Angkat dan tiriskan.</li>
+                    <li>Goreng tempe yang sudah dibentuk hingga berwarna kuning kecoklatan, lalu angkat dan tiriskan.</li>
+                    <li>Gunakan minyak bekas menggoreng tempe untuk menumis bawang putih hingga harum. Tambahkan saus tomat, kaldu bubuk, merica, dan gula. Aduk rata hingga saus mengental.</li>
+                    <li>Sajikan steak tempe bersama dengan sayuran rebus dan kentang goreng atau rebus. Siram dengan saus BBQ di atasnya.</li>
                     <li>Sajikan selagi hangat.</li>
                   </ol>
 
                   <h2>Sumber Gizi:</h2>
                   <ul class="text-start">
-                    <li><strong>Tahu:</strong> Protein nabati, kalsium, dan zat besi.</li>
-                    <li><strong>Wortel:</strong> Vitamin A, serat, antioksidan.</li>
-                    <li><strong>Brokoli:</strong> Vitamin C, K, serat, antioksidan.</li>
+                    <li><strong>Tempe:</strong> Protein dari tempe yang berfungsi untuk memperbaiki jaringan tubuh dan membentuk otot.</li>
+                    <li><strong>Kentang:</strong> Karbohidrat yang menjadi sumber energi tubuh.</li>
+                    <li><strong>Wortel, Buncis dan Jagung:</strong> Serat, vitamin A, dan C</li>
                     <li><strong>Bawang Putih:</strong> Sifat anti-inflamasi dan antioksidan.</li>
                   </ul>
                 </div>
@@ -144,11 +153,11 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="assets/steaktempe.webp" class="img-fluid rounded-start" alt="...">
+                    <img src="..." class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Steak Tempe</h5>
+                      <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       <a href="resep2.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
@@ -160,11 +169,11 @@
               <div class="card mb-3" style="max-width: 540px;">
                 <div class="row g-0">
                   <div class="col-md-4">
-                    <img src="assets/sopsosis.jpeg" class="img-fluid rounded-start" alt="...">
+                    <img src="..." class="img-fluid rounded-start" alt="...">
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Sop Sosis</h5>
+                      <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       <a href="resep2.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
@@ -185,7 +194,7 @@
                   </div>
                   <div class="col-md-8">
                     <div class="card-body">
-                      <h5 class="card-title">Tahu Teriyaki</h5>
+                      <h5 class="card-title">Card title</h5>
                       <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                       <a href="resep2.html" class="btn btn-primary">Ayo Cek!</a>
                     </div>
