--- a/tips.html
+++ b/tips.html
@@ -81,5 +81,8 @@
       <h5>15. Hindari Kebiasaan Makan Berlebihan</h5>
         <p>Cobalah untuk makan perlahan dan berhenti sebelum kenyang penuh. Makan dengan penuh kesadaran membantu tubuh mengatur sinyal lapar dan kenyang dengan lebih baik.</p>
       </div>
+
+      <a href="#" id="back-to-top" class="btn btn-primary"><i class="fas fa-arrow-up"></i></a>
+      
     </body>
 </html>
