--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
         <h1 class="text-center"> Selamat datang di MakMur Sehat! </h1>
 
-        <div class="row align-items-center">
+        <div class="row align-items-center mx-auto">
           <div class="col">
             <div class="card" style="width: 18rem;">
               <img src="assets/slide1.jpg" class="card-img-top" alt="...">
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="container-1 center my-5">
-          <h2 class="text-center mb-4">Kenapa Kita Harus Makan Sehat?</h2>
+          <h2 class="text-center mb-4">Kenapa Kita Harus Hidup Sehat?</h2>
           <div class="row">
 
               <div class="col-md-4">
@@ -130,7 +130,7 @@
                       <i class="fas fa-heart fa-3x text-success mr-3"></i>
                       <div class="media-body">
                           <h5 class="mt-0">Kualitas Kesehatan</h5>
-                          Makanan yang penuh dengan nutrisi mampu mengurangi kesempatan terkena penyakit kronis.
+                          Dengan cara memakan makanan yang penuh dengan nutrisi dan menjaga pola hidup, mampu mengurangi kesempatan terkena penyakit kronis.
                       </div>
                   </div>
               </div>
@@ -150,7 +150,7 @@
                       <i class="fas fa-running fa-3x text-primary mr-3"></i>
                       <div class="media-body">
                           <h5 class="mt-0">Meningkatkan Energi</h5>
-                          Memakan makanan sehat dapat meningkatkan energi untuk beraktivitas setiap hari.
+                          Memakan makanan sehat dan olahraga dapat meningkatkan energi untuk beraktivitas setiap hari.
                       </div>
                   </div>
               </div>
@@ -215,8 +215,10 @@
       <h2>Kesimpulan</h2>
       Makanan murah dan sehat bukanlah mitos. Dengan perencanaan yang baik, pilihan bahan yang tepat, dan sedikit kreativitas, siapa pun bisa menikmati makanan sehat tanpa harus menguras kantong. Pola makan Makmur Sehat bukan hanya tentang memilih bahan makanan yang terjangkau, tetapi juga tentang gaya hidup yang bijaksana dan bermanfaat bagi tubuh dalam jangka panjang. Mulai hari ini, pilihlah makanan sehat yang murah dan nikmati manfaatnya untuk kesehatan tubuh dan pikiran Anda.
     
-        </div>
+      </div>
       
+      <a href="#" id="back-to-top" class="btn btn-primary"><i class="fas fa-arrow-up"></i></a>
+
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,160L48,186.7C96,213,192,267,288,282.7C384,299,480,277,576,261.3C672,245,768,235,864,240C960,245,1056,267,1152,256C1248,245,1344,203,1392,181.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     <section id = "contact" class="footer">
         <h1 class="text-center">Contact</h1>
